--- a/Demos/AppKit DSL Demo/AppKit DSL Demo/Base.lproj/Main.storyboard
+++ b/Demos/AppKit DSL Demo/AppKit DSL Demo/Base.lproj/Main.storyboard
@@ -782,6 +782,23 @@
                                             </constraints>
                                         </view>
                                     </tabViewItem>
+                                    <tabViewItem label="Split View" identifier="" id="PHR-Pi-lnF">
+                                        <view key="view" id="UZl-9l-Cg6">
+                                            <rect key="frame" x="10" y="33" width="434" height="208"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <subviews>
+                                                <customView translatesAutoresizingMaskIntoConstraints="NO" id="6JH-pc-KeB" customClass="DSFAppKitBuilderView" customModule="DSFAppKitBuilder">
+                                                    <rect key="frame" x="20" y="20" width="394" height="168"/>
+                                                </customView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="6JH-pc-KeB" secondAttribute="trailing" constant="20" symbolic="YES" id="3GB-ID-1dZ"/>
+                                                <constraint firstItem="6JH-pc-KeB" firstAttribute="top" secondItem="UZl-9l-Cg6" secondAttribute="top" constant="20" symbolic="YES" id="8st-B3-eyN"/>
+                                                <constraint firstItem="6JH-pc-KeB" firstAttribute="leading" secondItem="UZl-9l-Cg6" secondAttribute="leading" constant="20" symbolic="YES" id="EV1-k1-sic"/>
+                                                <constraint firstAttribute="bottom" secondItem="6JH-pc-KeB" secondAttribute="bottom" constant="20" symbolic="YES" id="QMQ-fN-v6b"/>
+                                            </constraints>
+                                        </view>
+                                    </tabViewItem>
                                 </tabViewItems>
                             </tabView>
                         </subviews>
@@ -797,6 +814,7 @@
                         <outlet property="demo2View" destination="zua-DB-w3c" id="Jit-f2-lG9"/>
                         <outlet property="demo3View" destination="KOC-fT-S3g" id="s5n-eZ-G7y"/>
                         <outlet property="demo4View" destination="r03-oK-RwT" id="wLh-r9-xqP"/>
+                        <outlet property="demo5View" destination="6JH-pc-KeB" id="GIX-wE-9F0"/>
                         <outlet property="dslView" destination="xLy-1I-5BM" id="QAh-JC-Fgb"/>
                     </connections>
                 </viewController>
